--- a/src/chern-HTML/chern-can.html
+++ b/src/chern-HTML/chern-can.html
@@ -8,14 +8,119 @@
 </head>
 <body>
     <div class="block-can">
-            <h3 class="ame">Что я умею</h3>
-            <img src="../img/bar.png" alt="bar"> <br>
-            <ul class="can">
-                <li><img class="usl-img" src="../img/nout.png" alt="pc"><h5 class="usl">Веб-дизайн </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore at a, blanditiis nihil.</p> </li>
-                <li><img class="usl-img" src="../img/znak.png" alt="pc"><h5 class="usl">Разработка </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> </li>
-                <li><img class="usl-img" src="../img/raketa.png" alt="pc"><h5 class="usl">СЕО-оптимизация</h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo.</p> </li>
-                <li><img class="usl-img" src="../img/gromofon.png" alt="pc"><h5 class="usl">Маркетинг </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam commodi id vero assumenda.</p> </li>
-            </ul>
+        <div class="parallax-can">
+           <div class="can-fon"></div>
+            <div class="can-text">
+                <h3 class="ame-can">Что я умею</h3>
+                <img src="../img/bar.png" alt="bar"> <br>
+                <ul class="can">
+                    <li><img class="usl-img" src="../img/nout.png" alt="pc"><h5 class="usl">Веб-дизайн </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore at a, blanditiis nihil.</p> </li>
+                    <li><img class="usl-img" src="../img/znak.png" alt="pc"><h5 class="usl">Разработка </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> </li>
+                    <li><img class="usl-img" src="../img/raketa.png" alt="pc"><h5 class="usl">СЕО-оптимизация</h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo.</p> </li>
+                    <li><img class="usl-img" src="../img/gromofon.png" alt="pc"><h5 class="usl">Маркетинг </h5><p class="usl-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam commodi id vero assumenda.</p> </li>
+                </ul>
+            </div>
         </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
