--- a/src/chern-HTML/chern-otziv.html
+++ b/src/chern-HTML/chern-otziv.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style-chern-otziv.css">
 </head>
 <body>
-    <div class="block-ot">
+    <div class="block-otziv">
             <h3 class="ame">Отзывы</h3>
             <img class="bar" src="../img/bar.png" alt="bar"> <br>
             <img class="otziv-img" src="../img/michael.png" alt="face">
